# nvd-support-car

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  INSTALL.sh  README.md  ROADMAP.md  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  release.yml
examples/: .env.example
examples/scripts/: README.md  nvd_ingest.R  nvd_ingest.py  nvd_ingest.sh  nvd_ingest.ts
migrations/: 001_init.sql  002_gottcha2_full_table.sql  003_stast_table.sql
src/: config.rs  error.rs  lib.rs  main.rs  preflight.rs  state.rs
src/db/: mod.rs  operations.rs
src/handlers/: dummy.rs  gottcha2.rs  ingest.rs  mod.rs  stast.rs
src/middleware/: bearer_auth.rs  mod.rs
src/models/: mod.rs  record.rs
src/services/: ingest.rs  mod.rs  parsing.rs
tests/: e2e_test.rs  integration_db_test.rs  integration_test.rs
tests/common/: certificates.rs  database.rs  mod.rs  server.rs
