[package]
name = "nvd-support-car"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.32", features = ["gzip", "tokio"] }
axum = "0.8.6"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
color-eyre = "0.6.5"
envy = "0.4.2"
futures-util = { version = "0.3.31", features = ["io"] }
rayon = "1.11.0"
rustls = { version = "0.23.33", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["migrate", "postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.16", features = ["io"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.6", features = ["timeout"] }
tower_governor = { version = "0.8.0", features = ["tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = "1.18.1"

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
axum-test = "18.1.0"
flate2 = "1.1.4"
testcontainers = "0.25.0"
testcontainers-modules = "0.13.0"
tokio-test = "0.4.4"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"

